# Rusty-RAG-A-Lightweight-RAG-System-for-Edge-Applications

./: Cargo.toml  README.md
diagrams/: flowchart.mmd
faiss_server/: main.py  requirements.txt
faiss_server/index_store/: index.faiss  metadata.json
src/: main.rs
src/routes/: ask.rs  mod.rs  query.rs  upload.rs
src/services/: embeddings.rs  llm.rs  mod.rs  semantics.rs
src/utils/: chunk.rs  file.rs  mod.rs
uploads/: abc.txt
