[package]
name = "docuquery"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }  # <-- required!
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-util = "0.7"
mime = "0.3"
axum-extra = { version = "0.9", features = ["multipart"] }
reqwest = { version = "0.11", features = ["json", "blocking", "gzip"] }
dotenvy = "0.15"